@@ -288,3 +288,6 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E348,extras-openmoji,gardening,saw,"foxtail, carpentry, wood, branch, rip saw",Tonia Reinhardt,2020-06-11
 ,E011,extras-openmoji,animals-nature,microbe,"amoeba, bacteria, virus",Ricarda Krejci,2019-05-07
 ,E20D,extras-openmoji,travel-places,black hole,"interstellar, event horizon, accretion disc",Alexander Müller,2020-06-28
+🯆‍👗,1FBC6-200D-1F457,extras-openmoji,symbol-other,stick figure with dress and arms raised,"legacy computing",Alexander Müller,2020-11-04
+🯇‍👗,1FBC7-200D-1F457,extras-openmoji,symbol-other,stick figure with dress leaning left,"legacy computing",Alexander Müller,2020-11-04
+🯈‍👗,1FBC8-200D-1F457,extras-openmoji,symbol-other,stick figure with dress leaning right,"legacy computing",Alexander Müller,2020-11-04
