@@ -46,3 +46,8 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ℗,2117,extras-unicode,symbol-other,sound recording copyright,"trademark, music, phonogram",Carlin MacKenzie,2020-06-06,1.1
 🄯,1F12F,extras-unicode,symbol-other,copyleft symbol,"open source, free, libre, reciprocal",Carlin MacKenzie,2020-06-06,11
 🏴󠁤󠁥󠁢󠁹󠁿,1F3F4-E0064-E0065-E0062-E0079-E007F,extras-unicode,subdivision-flag,bavaria flag,"state, lozenge",Manuel Strehl,2020-07-09,?
+🯅,1FBC5,extras-unicode,symbol-other,stick figure,"legacy computing",Alexander Müller,2020-11-04,13
+🯆,1FBC6,extras-unicode,symbol-other,stick figure with arms raised,"legacy computing",Alexander Müller,2020-11-04,13
+🯇,1FBC7,extras-unicode,symbol-other,stick figure leaning left,"legacy computing",Alexander Müller,2020-11-04,13
+🯈,1FBC8,extras-unicode,symbol-other,stick figure leaning right,"legacy computing",Alexander Müller,2020-11-04,13
+🯉,1FBC9,extras-unicode,symbol-other,stick figure with dress,"legacy computing",Alexander Müller,2020-11-04,13
