@@ -3437,6 +3437,9 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E280,extras-openmoji,smileys-emotion,exhausted face,,"exhausted, sleepy, tired, face",Mariella Steeb,2018-04-18,,,,,,
 ,E281,extras-openmoji,smileys-emotion,incredulous face,,"incredulous, disbelief, shocked",Mariella Steeb,2018-04-18,,,,,,
 ,E282,extras-openmoji,smileys-emotion,dejected face,,"sigh, ._., pensive, disappointed",Carlin MacKenzie,2020-01-10,,,,,,
+🯆‍👗,1FBC6-200D-1F457,extras-openmoji,symbol-other,stick figure with dress and arms raised,,legacy computing,Alexander Müller,2020-11-04,,,,,,
+🯇‍👗,1FBC7-200D-1F457,extras-openmoji,symbol-other,stick figure with dress leaning left,,legacy computing,Alexander Müller,2020-11-04,,,,,,
+🯈‍👗,1FBC8-200D-1F457,extras-openmoji,symbol-other,stick figure with dress leaning right,,legacy computing,Alexander Müller,2020-11-04,,,,,,
 ,E380,extras-openmoji,symbols,no handshaking,,"hygiene, agreement, virus, meeting, spread, germs",Julian Grüneberg,2020-04-05,,,,,,
 ,E381,extras-openmoji,symbols,web syndication,,"feed, rss, atom feed, podcast, subscribe, web feed",Alexander Müller,2020-04-19,,,,,,
 ,E1C0,extras-openmoji,technology,wireframes,,,Baris Camli,2018-04-18,,,,,,
@@ -3530,6 +3533,11 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🅮,1F16E,extras-unicode,symbol-other,circled c with overlaid backslash,,"license, copyright, creative commons, open, libre, public domain",Carlin MacKenzie,2020-04-17,,,,,13,
 🅯,1F16F,extras-unicode,symbol-other,circled human figure,,"license, copyright, creative commons, open, libre, by, attribution, credit",Carlin MacKenzie,2020-04-17,,,,,13,
 🐱‍💻,1F431-200D-1F4BB,extras-unicode,symbol-other,hacker cat,,"coder, developer, software, technologist, smart, clever, code, notebook, computer",Benedikt Groß,2020-03-06,,,,,?,
+🯅,1FBC5,extras-unicode,symbol-other,stick figure,,legacy computing,Alexander Müller,2020-11-04,,,,,13,
+🯆,1FBC6,extras-unicode,symbol-other,stick figure with arms raised,,legacy computing,Alexander Müller,2020-11-04,,,,,13,
+🯇,1FBC7,extras-unicode,symbol-other,stick figure leaning left,,legacy computing,Alexander Müller,2020-11-04,,,,,13,
+🯈,1FBC8,extras-unicode,symbol-other,stick figure leaning right,,legacy computing,Alexander Müller,2020-11-04,,,,,13,
+🯉,1FBC9,extras-unicode,symbol-other,stick figure with dress,,legacy computing,Alexander Müller,2020-11-04,,,,,13,
 ℗,2117,extras-unicode,symbol-other,sound recording copyright,,"trademark, music, phonogram",Carlin MacKenzie,2020-06-06,,,,,1.1,
 ℠,2120,extras-unicode,symbol-other,service mark,,"trademark, sm",Carlin MacKenzie,2020-06-06,,,,,1.1,
 ⊜,229C,extras-unicode,symbol-other,circled equals,,"license, copyright, creative commons, open, libre",Carlin MacKenzie,2020-04-18,,,,,1.1,
