@@ -58446,6 +58446,57 @@
     "order": ""
   },
   {
+    "emoji": "🯆‍👗",
+    "hexcode": "1FBC6-200D-1F457",
+    "group": "extras-openmoji",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure with dress and arms raised",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "🯇‍👗",
+    "hexcode": "1FBC7-200D-1F457",
+    "group": "extras-openmoji",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure with dress leaning left",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "🯈‍👗",
+    "hexcode": "1FBC8-200D-1F457",
+    "group": "extras-openmoji",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure with dress leaning right",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E380",
     "group": "extras-openmoji",
@@ -60024,6 +60075,91 @@
     "skintone_base_emoji": "",
     "skintone_base_hexcode": "",
     "unicode": "?",
+    "order": ""
+  },
+  {
+    "emoji": "🯅",
+    "hexcode": "1FBC5",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "13",
+    "order": ""
+  },
+  {
+    "emoji": "🯆",
+    "hexcode": "1FBC6",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure with arms raised",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "13",
+    "order": ""
+  },
+  {
+    "emoji": "🯇",
+    "hexcode": "1FBC7",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure leaning left",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "13",
+    "order": ""
+  },
+  {
+    "emoji": "🯈",
+    "hexcode": "1FBC8",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure leaning right",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "13",
+    "order": ""
+  },
+  {
+    "emoji": "🯉",
+    "hexcode": "1FBC9",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "stick figure with dress",
+    "tags": "",
+    "openmoji_tags": "legacy computing",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-04",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "13",
     "order": ""
   },
   {
